# pe

./: .gitignore  UphillPaths.hs  draw.hs  pe10.hs  pe11.hs  pe12.hs  pe13.hs  pe14.hs  pe15.hs  pe16.hs  pe17.hs  pe386.hs  pe8.hs  pe9.hs  uhp_new.hs  uhp_old.hs  uhp_opt.hs
411/: Draw.hs  Point.hs  UphillPaths.hs
UphillPaths/: README.md  UphillPaths-exe.prof  UphillPaths.cabal  stack.yaml
UphillPaths/app/: Main.hs
UphillPaths/src/: Draw.hs  Point.hs  UphillPaths.hs
UphillPaths/test/: Spec.hs
old_stuff/: README.md  graph.hs  pe276.hs  pe411.hs
