name:                UphillPaths
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/UphillPaths#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UphillPaths
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       array
  default-language:    Haskell2010
  other-modules:       Point

executable UphillPaths-exe
  hs-source-dirs:      app,
                       src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts
  build-depends:       base,
                       containers,
                       array
  other-modules:       UphillPaths,
                       Point
  default-language:    Haskell2010

test-suite UphillPaths-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       array
  other-modules:       UphillPaths,
                       Point
  ghc-options:         -O -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/UphillPaths
